collections/search/css/searchStylesInner.css
/* PLUGINS */
/* ==============================
   BASE STYLES
   @mixin ============================= */

@import "../../../css/v202209/symbiota/variables.css";
/* BASE STYLES ******************************************/
/* Typography */
.inner-search body {
  font-size: 1em;
  font-size: 16px;
}

.inner-search fieldset {
  /* border: none; */
}

.inner-search input {
  padding: 0;
}

.inner-search h3 {
  font-size: 1.1rem !important;
}

@font-face {
  font-family: "Material Icons";
  font-style: normal;
  font-weight: 400;
  src: url(../fonts/MaterialIcons-Regular.eot);
  src: local("Material Icons");
  src: local("MaterialIcons-Regular");
  src: url(../fonts/MaterialIcons-Regular.woff2) format("woff2");
  src: url(../fonts/MaterialIcons-Regular.woff) format("woff");
  src: url(../fonts/MaterialIcons-Regular.ttf) format("truetype");
}

.inner-search .material-icons {
  font-family: "Material Icons";
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;
  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;
  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;
  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;
  /* Support for IE. */
  -webkit-font-feature-settings: "liga";
  font-feature-settings: "liga";
}

/* COMMON */
/* CSS GRID HELPERS */
.inner-search .grid {
  display: -ms-grid;
  display: grid;
}

.inner-search .grid--half {
  -ms-grid-columns: 1fr 1fr;
  grid-template-columns: 1fr 1fr;
  grid-gap: 20px;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

/* INPUTS */
.inner-search .assistive-text {
  color: var(--medium-color);
  font-size: 0.8em;
}

.inner-search .invalid {
  border: 1px solid red;
  border-radius: 2px;
}

/* Main */
/* NAV */
/* FOOTER */
.inner-search section {
  margin: 1em 0;
}

/* ==============================
   LAYOUT STYLES
   @mixin ============================= */
/* Search Form Layout ********************/
.inner-search body {
  font-size: 14px;
}

.inner-search input:invalid {
  border: 1px solid red !important;
}

.inner-search input[type="checkbox"] {
  width: 16px;
  height: 16px;
  vertical-align: baseline !important;
}

.inner-search #all-neon-colls-quick {
  margin-top: 1em;
}

.inner-search select {
  width: 100%;
}

.inner-search .material-icons {
  width: 16px;
  height: 16px;
  margin: 0 0.25em;
  font-size: 16px !important;
  cursor: pointer;
}

.inner-search .collapsed {
  display: none;
}

.inner-search .modal ul {
  list-style-type: none;
  padding-left: 20px;
}

.inner-search .box {
  padding: 20px;
  display: none;
  background-color: var(--body-bg-color);
}

.inner-search .tab {
  margin-right: 15px;
  padding: 10px 15px 15px 15px;
}

.inner-search .tab-active {
  background-color: var(--body-bg-color);
  font-weight: 600;
}

.inner-search #params-form {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 3fr 1fr;
  grid-template-columns: 3fr 1fr;
  grid-gap: 10px;
}

.inner-search #criteria-panel {
  display: block;
  background-color: var(--body-bg-color);
  padding: 0.5rem 1rem;
}

.inner-search #search-form-taxonomy {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 2fr 1fr;
  grid-template-columns: 2fr 1fr;
  grid-gap: 10px;
  -webkit-box-align: self-start;
  -ms-flex-align: self-start;
  align-items: self-start;
}

.inner-search #search-form-colls {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 12fr 0fr;
  grid-template-columns: 12fr 0fr;
  grid-gap: 10px;
}

.inner-search #search-form-colls ul {
  list-style-type: none;
  padding-left: 20px;
}

.inner-search #search-form-locality {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 1fr;
  grid-template-columns: 1fr 1fr;
  grid-gap: 10px;
}

.inner-search #search-form-locality ul {
  list-style-type: none;
  padding-left: 20px;
}

.inner-search #search-form-latlong {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 10px;
}

.inner-search #search-form-coll-event {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 1fr;
  grid-template-columns: 1fr 1fr;
  grid-gap: 10px;
}

.inner-search #search-form-sample {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 1fr;
  grid-template-columns: 1fr 1fr;
  grid-gap: 10px;
}

.inner-search .errors {
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1;
  padding: 15px;
  pointer-events: none;
}

.inner-search .errors .error {
  padding: 15px;
  border-radius: 4px;
  background-color: rgba(230, 20, 20, 0.8);
  color: var(--body-bg-color);
  font-size: 14px;
  -webkit-transform: translateY(300px);
  transform: translateY(300px);
  pointer-events: all;
  margin-bottom: 10px;
  -webkit-animation: slide-in 1s ease-out forwards;
  animation: slide-in 1s ease-out forwards;
}

@-webkit-keyframes slide-in {
  to {
    -webkit-transform: translateY(0px);
    transform: translateY(0px);
  }
}

@keyframes slide-in {
  to {
    -webkit-transform: translateY(0px);
    transform: translateY(0px);
  }
}

/* ==============================
   LAYOUT STYLES
   @mixin ============================= */
/* COLOR BOXES */
.inner-search span.text-color {
  color: #444444;
  background-color: #444444;
  line-height: 0.5em;
}

.inner-search span.text-color-lighter {
  color: var(--menu-top-bg-color);
  background-color: var(--medium-color);
  line-height: 0.5em;
}

.inner-search span.h-color {
  color: #444444;
  background-color: #444444;
  line-height: 0.5em;
}

.inner-search span.link-color {
  color: var(--link-color);
  background-color: var(--link-color);
  line-height: 0.5em;
}

.inner-search span.accent-color {
  color: var(--medium-color);
  background-color: var(--medium-color);
  line-height: 0.5em;
}
/* ... */

